src/objects/SupportedLanguage__c.object
<CustomObject>
    <description>Junction Object between Service Country Configuration and Language</description>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Supported Languages</relationshipLabel>
        <relationshipName>Supported_Languages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceCountry__c</fullName>
        <label>Service Country</label>
        <referenceTo>ServiceCountryConfiguration__c</referenceTo>
        <relationshipLabel>Supported Languages</relationshipLabel>
        <relationshipName>Supported_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supported Language</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>ServiceCountry__c</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Supported Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>